--- a/ASC.Xmpp.Server.Launcher/web.consumers.config
+++ b/ASC.Xmpp.Server.Launcher/web.consumers.config
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <consumers>
   <components>
-
+    <component
+       type="ASC.Web.Core.Jabber.FireBase, ASC.Web.Core"
+       name="Firebase"
+       order="12">
+      <props>
+        <item key="firebase_apiKey" value=""/>
+        <item key="firebase_projectId" value=""/>
+        <item key="firebase_messagingSenderId" value=""/>
+        <item key="firebase_authorization" value=""/>
+      </props>
+    </component>
   </components>
 </consumers>
